testdata/baselines/reference/submodule/conformance/jsDeclarationsParameterTagReusesInputNodeInEmit2.errors.txt
base.js(11,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
base.js(11,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.


==== base.js (2 errors) ====
    class Base {
        constructor() {}
    }
    
    const BaseFactory = () => {
        return new Base();
    };
    
    BaseFactory.Base = Base;
    
    module.exports = BaseFactory;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
    
==== file.js (0 errors) ====
    /** @typedef {typeof import('./base')} BaseFactory */
    
    /**
     *
     * @param {InstanceType<BaseFactory["Base"]>} base
     * @returns {InstanceType<BaseFactory["Base"]>}
     */
    const test = (base) => {
        return base;
    };
    